--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="text/javascript" src="//url.to/script.js"></script>
     <meta charset="utf-8" />
     <title>IpAddressTracker</title>
     <base href="/" />
