--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <script type="text/javascript" src="//url.to/script.js"></script>
     <meta charset="utf-8" />
     <title>IpAddressTracker</title>
